# Pirouette-Compiler

./: .gitignore  .ocamlformat  Makefile  README.md  dune-project  http_pirc.opam  pirc.opam
.devcontainer/docs/: devcontainer.json
.githooks/: pre-commit
.github/workflows/: check-code.yml  check-pr-base.yml  docs.yml  publish-docs.yml
Wireshark_logs/: Crash.csv  No_crash.csv
_coverage/: index.html
_coverage/test/: prettyprint_test.ml.html  testcases.ml.html
benchmarks/: commstime_original.pir  commstime_test.pir  selecttime.pir
docs/api/: dune  index.html  index.mld  sherlodoc.js
docs/api/http_pirc/: db.js  index.html
docs/api/odoc.support/: highlight.pack.js  katex.min.css  odoc.css  odoc_search.js
docs/api/pirc/: db.js  developer_guide.html  index.html  user_guide.html
examples/: .gitignore  bookseller.pir  bookseller.yaml  buyer_seller.pir  carkey.ml  carkey.pir  cg.pir  demo.pir  demo2.pir  demo3.pir  demoS26.pir  ep.pir  ex0.pir  ex1.pir  ex2.pir  ex3.pir  ex4.pir  ex5.pir  exf1.pir  exf2.pir  exf3.pir  exprint.pir  exvariant1.pir  exvariant2.pir  exvariant3.pir  ffi_floats.pir  floats.pir  heartrate.ml  heartrate.pir  pingpong.pir  test_assign.pir  test_ffi.pir  variant_declaration.dot  variant_declaration.pir  variant_simple.pir  variant_wconstructors.dot  variant_wconstructors.pir
examples/Test/: koc_opt_sync_send.pir  koc_opt_sync_send.yaml
examples/audvy/: pirTypes.pir
examples/audvy/stdlib/: filenm.pir  prerr.pir  rand.pir  scrumboardtests.pir  system.pir
examples/haschor/: Readme.md
examples/temp/: hash.pir
lib/a_rname/: README.md  dune  rename.ml
lib/ast_core/: choreo.ml  choreo.mli  dune  local.ml  local.mli  net.ml  net.mli
lib/ast_utils/: ast_locs.ml  ast_locs.mli  ast_utils.ml  ast_utils.mli  dot_ast.ml  dot_ast.mli  dune  jsonify_ast.ml  jsonify_ast.mli  pprint_ast.ml
lib/codegen/: emit_core.ml
lib/display/: display.ml  dune
lib/http_pirc/: #config_parser.ml#  commented_send_receive.ml  config_parser.ml  developer_guide.mld  dune  index.mld  send_receive.ml  send_receive_backup.ml  user_guide.mld
lib/import_resolver/: dune  import_resolver.ml
lib/netgen/: dune  netgen.ml  netgen.mli
lib/ocamlgen/: #toplevel_http.ml#  dune  emit_core.ml  emit_core.mli  msg_intf.mli  toplevel_domain.mli  toplevel_http.ml  toplevel_http.mli  toplevel_mpi.mli
lib/parsing/: dune  lexer.mll  net_lexer.mll  net_parser.automaton  net_parser.mly  net_parser_doc.mli  parse.ml  parse.mli  parsed_ast.mli  parser.mly  parser_doc.mli
lib/stdlib_utils/: README.md  dune  stdlib.pir  stdlib_ast.ml  stdlib_compiler.ml  stdlib_linker.ml
lib/typing/: dune  typ_infer.ml  typ_infer.mli
optimization_tests/15_Participants/Simple_Send/: koc_opt_ss.pir  koc_unopt_ss.pir
optimization_tests/15_Participants/Sync_Send/: koc_opt_sync_send.pir  koc_unopt_sync_send.pir
optimization_tests/20_Participants/: p20_seq_out_seq_in_collatz.pir
optimization_tests/30_Participants/30_Participants/: p30_fan_out_fan_in_collatz.pir  p30_fan_out_none_in.pir  p30_seq_out_fan_in_collatz.pir  p30_seq_out_none_in.pir
optimization_tests/30_Participants/Original_Files/: p30_fan_out_seq_in_collatz.pir  p30_seq_out_seq_in_collatz.pir
optimization_tests/31_Participants/31_Participants/: p31_fan_out_fan_in_collatz.pir  p31_fan_out_seq_in.pir  p31_seq_out_fan_in_collatz.pir
optimization_tests/31_Participants/Original_Files/: p31_fan_out_seq_in_collatz.pir
optimization_tests/7_Participants/Collatz/: koc_opt_collatz.pir  koc_unopt_collatz.pir
optimization_tests/7_Participants/Collatz_Fan_In/: koc_opt_collatz.pir  koc_unopt_collatz.pir
optimization_tests/7_Participants/Simple_Send/: koc_opt_simple_send.pir  (+1 more)
optimization_tests/CleanUp_Scripts/: cleanup.sh
optimization_tests/Codegen/: helper_function_gen.sh  helper_function_seq.sh  output32.txt  output32_return.txt
test/: astutils_testcases.ml  buyer_seller.Buyer.ast  buyer_seller.Seller.ast  buyer_seller.ast  buyer_seller.cmi  buyer_seller.cmx  buyer_seller.ml  buyer_seller.pir  carkey.ml  carkey_tests.ml  core_test.ml  core_test_choreo.ml  demo.pir  demo.yaml  demo_A.ml  demo_B.ml  demo_C.ml  demo_D.ml  demo_E.ml  demo_F.ml  demo_G.ml  demo_H.ml  demo_I.ml  demo_J.ml  demo_K.ml  demo_L.ml  demo_M.ml  demo_N.ml  demo_O.ml  demo_P.ml  demo_PIRSTDLIBLOC.ml  demo_run.sh  displaytest.domain.ml  displaytest.pir  dot_file.dot  dot_try.dot  dotast_test.ml  dotgen_testcases.ml  dune  emit_core_test.ml  (+65 more)
test/import_test_files/: diamond_cycle_a.pir  diamond_cycle_b.pir  import_localtest.pir  import_transitive_a.pir  import_transitive_b.pir  import_transitive_c.pir  stdlib_test.domain.ml  stdlib_test.pir
test/pipeline_src/: nested_sync_asym.A.ast  nested_sync_asym.B.ast  nested_sync_asym.C.ast  nested_sync_asym.PIRSTDLIBLOC.ast  nested_sync_asym.ast  nested_sync_asym.domain.ml  nested_sync_asym.pir  nested_sync_asym_reordered.pir  nested_sync_sym.domain.cmi  nested_sync_sym.domain.cmx  nested_sync_sym.domain.ml  nested_sync_sym.pir
theory/: .gitignore  commenters.sty  compiler.md  compiler_Guide  concrete_syntax.tex  file_structure.md  notes.cls  template.tex  theory.tex  typing.bib  typing.tex
theory/pl-syntax/: example.tex  metavars.sty  metavarsx.sty  pl-syntax.sty
(+148 files in other folders)
