; *TO ADD A NEW TEST SUITE*

; Create your test module, as one would expect
; Create a comprehensive test suite in that test module.
; *DO NOT* call "run_test_tt_main" in that file; if that test fails, no more tests will be run.
; Add that module's suite in main_test.ml
; In this file;
;   Add the module (name of new test file) to the stanza below, in the "modules" section.
;   Add any used libraries to the "libraries" section, if they're not already there.

;This stanza runs all of our tests, running a single all-encompasing test ensures that the testing process 
;doesn't end prematurely due to a test failing.

(test
 (name main_test)
 (modules
  main_test
  prettyprint_test
  typcheck_test
  parsing_test
  marshal_test
  dotast_test
  net_parsing_test
  emit_core_test
  types_test
  astutils_testcases
  stdlib_test
  ffi_test
  import_tests
  core_test_choreo
  core_test
  dotast_test)
 (libraries
  ounit2
  parsing
  ast_utils
  stdlib_utils
  typing
  ast_core
  http_pirc
  ppxlib
  ocamlgen
  cohttp-lwt-unix
  logs
  import_resolver)
 (preprocess
  (pps bisect_ppx ppxlib.metaquot))
 (deps
  (glob_files import_test_files/*.pir)))

;The following tests were commented out since before the tests were consolidated.
;They follow the old format, and would need to be added to the above stanza and main_test.ml to be reactivated.

; (executable
;  (name pipeline_gen))

; (subdir
;  pipeline_run
;  (dynamic_include ../pipeline_gen/dune.inc))

; (subdir
;  pipeline_gen
;  (rule
;   (deps
;    (source_tree ../pipeline_src))
;   (action
;    (with-stdout-to
;     dune.inc
;     (run ../pipeline_gen.exe)))))

;runs test case prettyprint_test.ml (with astutils_testcases.ml as helper)
; TESTED FILES 2/25
; 4% (3 / 64) -> lib/ast_core/choreo.ml
; 12% (11 / 90) -> lib/ast_core/local.ml
; 0% (0 / 65) -> lib/ast_utils/ast_locs.ml
; 16% (4 / 24) -> lib/ast_utils/ast_utils.ml
; 0% (0 / 417) -> lib/ast_utils/dot_ast.ml
; 66% (142 / 213) -> lib/ast_utils/jsonify_ast.ml (focus)
; 67% (90 / 134) ->lib/ast_utils/pprint_ast.ml (focus)
; 63% (67 / 105) -> lib/parsing/lexer.ml
; 18% (2 / 11) -> lib/parsing/parse.ml
; 0% (0 / 5) -> lib/parsing/parsed_ast.ml
; 40% (949 / 2362) -> lib/parsing/parser.ml

;(test
;(name send_receive_test)
;(modules send_receive_test)
;(libraries ounit2 http cohttp-lwt-unix logs types_test)
; (deps ../test/example.yaml))

;(test
;(name marshal_test)
;(modules marshal_test)
;(libraries ounit2 http types_test))
;runs typcheck_test.ml
; TESTED FILES 2/25
; 0% (0 / 64) -> lib/ast_core/choreo.ml
; 0% (0 / 90) -> lib/ast_core/local.ml
; 20% (21 / 105) -> lib/parsing/lexer.ml
; 18% (2 / 11) -> lib/parsing/parse.ml
; 0% (0 / 5) -> lib/parsing/parsed_ast.ml
; 2% (67 / 2362) -> lib/parsing/parser.ml
; 78% (344 / 437) -> lib/typing/typ_infer.ml (focus)

;runs parsing_test.ml
; -- currently only testing stuff covered by prettyprint_test and typcheck_test
; TESTED FILES 2/25
; 0% (0 / 64) -> lib/ast_core/choreo.ml
; 0% (0 / 90) -> lib/ast_core/local.ml
; 20% (21 / 105) -> lib/parsing/lexer.ml (focus)
; 18% (2 / 11) -> lib/parsing/parse.ml (focus)
; 0% (0 / 5) -> lib/parsing/parsed_ast.ml
; 2% (67 / 2362) -> lib/parsing/parser.m (focus)

;  (test
;  (name variants_test)
;  (modules variants_test variants_testcases)
;  (libraries ounit2 parsing ast_core))

;this library is a requisite for marshal_test

;runs marshal_test.ml
; TESTED FILES 2/25
; 0% (0 / 65) -> lib/ast_utils/ast_locs.ml
; 0% (0 / 24) -> lib/ast_utils/ast_utils.ml
; 0% (0 / 417) -> lib/ast_utils/dot_ast.ml
; 0% (0 / 213) -> lib/ast_utils/jsonify_ast.ml
; 0% (0 / 134) -> lib/ast_utils/pprint_ast.ml
; 0% (0 / 27) -> lib/config/config_parser.ml
; 12% (15 / 123) -> lib/http/send_receive.ml (focus)

(executable
 (name marshal_sender)
 (modules marshal_sender)
 (libraries ounit2 http_pirc cohttp-lwt-unix logs types_test))

;(executable
; (name marshal_receiver)
; (modules marshal_receiver)
; (libraries ounit2 http cohttp-lwt-unix logs types_test))

; (test
;  (name msg_intf_test)
;  (modules msg_intf_test)
;  (libraries ounit2 ppxlib ast_core ocamlgen)
;  (preprocess
;   (pps ppxlib.metaquot)))

; (test
;  (name toplevel_shm_test)
;  (modules toplevel_shm_test)
;  (libraries ounit2 ppxlib ast_core ocamlgen)
;  (preprocess
;   (pps ppxlib.metaquot)))
