; (rule
;  (target _parser.conflicts)
;  (deps parser.conflicts)
;  (action (copy %{deps} %{target}))
;  (mode (promote (until-clean))))

(ocamllex lexer net_lexer)

(menhir
 (modules parser net_parser))

(library
 (name parsing)
 (public_name pirc.parsing)
 (private_modules lexer parser)
 (modules_without_implementation net_parser_doc parser_doc)
 (libraries ast_core)
 (preprocess
  (pps bisect_ppx)))
